bug(css): Reset line-height to prevent jumping

--- a/mod/dashboard/app/styles/etcd-widgets.css
+++ b/mod/dashboard/app/styles/etcd-widgets.css
@@ -640,6 +640,7 @@ body {
 		color: #999;
 		padding-left: 3px;
 		font-size: 13px;
+		line-height: 100%;
 	}
 
 	.etcd-container.etcd-stats .etcd-list .etcd-latency-value {
